@@ -1,3 +1,8 @@
+2008-03-22 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/gen.c (adjustArithmeticResult): fixed bug 1839299
+	* support/regression/tests/bug1839277.c: added related testBug1839299
+
 2008-03-21 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/ds390/gen.c (opIsGptr, adjustArithmeticResult, genAddrOf, genAssign),
